It's "Synthesis"... wrong Syn-word.

--- a/Settings.json
+++ b/Settings.json
@@ -52,7 +52,7 @@
 	"SkytittiesMageApprentice > ClothesCollegeRobesApprentice",
 	"SkyTittieBarkeeper > ClothesBarKeeper",
 	"SkyTittieBeggar > ClothesBeggarRobes",
-	"SkyTittiesRobesGreybeardTunicDUPLICATE001 > ClothesGreybeardTunic",
+	"SkyTittiesRobesGreybeardTunicDUPLICATE001 > ClothesRobesGreybeardTunic",
 	"SkytittiesJester > DBClothesJester",
 	"SkyTittieJourneyman > ClothesCollegeRobesCommon",
 	"SkytittiesMonk > ClothesMonkRobes",
